Corrected the changes disrupted by one of the merge